<resources>
    <string name="app_name">Sling Force</string>
    <string name="wire_rope">Wire Rope</string>
    <string name="sling">Sling</string>
    <string name="shackles_hooks"><![CDATA[Shackle&Hook]]></string>

    <string-array name="user_types">
        <item>Admin</item>
        <item>Client</item>
    </string-array>


    <!--Wire Rope Location Options-->
    <string-array name="wire_rope_locations">
        <item>Boom</item>
        <item>Hoist</item>
    </string-array>


    <!-- SLing End Fitting options -->
    <string-array name="sling_end_fitting_options">
        <item>Standard Soft Eye</item>
        <item>Standard Thimble Eye</item>
        <item>Sling Hook/Catch</item>
    </string-array>


    <string name="track">Tracking</string>


    <string name="request_quotation">Request Quotation</string>
    <string name="portMaritime"><![CDATA[Port&Maritime Cranes]]></string>
    <string name="constructionCranes">Construction Cranes</string>
    <string name="industrialCranes">Industrial Cranes</string>
    <string name="slingForce">Sling Force</string>
    <string name="filter_cranes">Filter Cranes</string>


    //tabLayout with new line

    <string name="tabConstructionCranes">Construction\n Cranes</string>
    <string name="tabIndustrialCranes">Industrial\n Cranes</string>
    <string name="port_maritime_cranes"><![CDATA[Port&Maritime\nCranes]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_type">User Type</string>
    <string name="create_account">Create Account</string>
    <string name="already_having_an_account">Already Having an Account? Sign in</string>
    <string name="choose_user_type">Choose User Type</string>
    <string name="full_name">Full Name</string>
    <string name="position_title">Position Title</string>
    <string name="company">Company</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_have_account">Don\'t Have an Account? Create Account</string>
    <string name="machine_serial_number">Machine Serial Number</string>
    <string name="machine_model">Machine Model</string>
    <string name="wire_rope_location">Wire Rope Location</string>
    <string name="machine_manufacture">Machine Manufacture</string>
    <string name="wire_rope_manufacture">Wire Rope Manufacture</string>
    <string name="wire_rope_construction">Wire Rope Construction</string>
    <string name="wire_rope_diameter">Wire Rope Diameter</string>
    <string name="wire_rope_length">Wire Rope Length</string>
    <string name="machine_specifications">Machine Specifications</string>
    <string name="current_machine_hour">Current Machine Hour</string>
    <string name="wire_rope_diameter_mm">Wire Rope Diameter \'mm\'</string>

    <string name="sling_first_end_fitting">Sling First End Fitting</string>
    <string name="sling_working_load_limit">Sling Working Load Limit</string>
    <string name="sling_second_end_fitting">Sling Second End Fitting</string>
    <string name="wire_rope_sling_specifications">Wire Rope SLing Specifications</string>
    <string name="submit_data">Submit Data</string>
    <string name="cancel">Cancel</string>
    <string name="end_fitting_specifications">End Fitting Specifications</string>
    <string name="material_manufacture">Material Manufacture</string>
    <string name="working_load_limit">Working Load Limit</string>
    <string name="diameter_mm">Diameter mm</string>


</resources>