<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crane_data_details_tv"
        android:text="@string/machine_specifications"
        android:layout_marginTop="@dimen/_16sdp"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/colorTextTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crane_data_details_tv"
        app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serial_number_layout"
        style="@style/DetailsTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:hint="@string/machine_serial_number"
        android:textColorHint="@color/colorHint"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/serial_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorTextTitle" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/crane_model_layout"
        style="@style/DetailsTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/machine_model"
        android:textColorHint="@color/colorHint"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="@id/serial_number_layout"
        app:layout_constraintStart_toStartOf="@id/serial_number_layout"
        app:layout_constraintTop_toBottomOf="@id/serial_number_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/crane_model_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorTextTitle" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/crane_manufacture_layout"
        style="@style/DetailsTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/machine_manufacture"
        android:textColorHint="@color/colorHint"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="@id/serial_number_layout"
        app:layout_constraintStart_toStartOf="@id/serial_number_layout"
        app:layout_constraintTop_toBottomOf="@id/crane_model_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/crane_manufacture_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorTextTitle" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wire_rope_location_layout"
        style="@style/DetailsTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/wire_rope_location"
        android:textColorHint="@color/colorHint"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="@id/serial_number_layout"
        app:layout_constraintStart_toStartOf="@id/serial_number_layout"
        app:layout_constraintTop_toBottomOf="@id/crane_manufacture_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wire_rope_location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorTextTitle" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wire_rope_manufacture_layout"
        style="@style/DetailsTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/wire_rope_manufacture"
        android:textColorHint="@color/colorHint"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="@id/serial_number_layout"
        app:layout_constraintStart_toStartOf="@id/serial_number_layout"
        app:layout_constraintTop_toBottomOf="@id/wire_rope_location_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wire_rope_manufacture_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorTextTitle" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wire_rope_construction_layout"
        style="@style/DetailsTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/wire_rope_construction"
        android:textColorHint="@color/colorHint"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="@id/serial_number_layout"
        app:layout_constraintStart_toStartOf="@id/serial_number_layout"
        app:layout_constraintTop_toBottomOf="@id/wire_rope_manufacture_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wire_rope_construction_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorTextTitle" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/dimen_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/wire_rope_construction_layout"
        app:layout_constraintStart_toStartOf="@id/serial_number_layout"
        app:layout_constraintEnd_toEndOf="@id/serial_number_layout"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wire_rope_diameter_layout"
            style="@style/DetailsTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/wire_rope_diameter"
            android:textColorHint="@color/colorHint"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorHint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wire_rope_diameter_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorTextTitle" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin ="@dimen/_4sdp"
            android:id="@+id/dimen_separator"
            android:layout_gravity="center"
            android:background="@color/colorHint"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wire_rope_length_layout"
            style="@style/DetailsTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/wire_rope_length"
            android:textColorHint="@color/colorHint"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorHint"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wire_rope_length_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorTextTitle" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/machine_hour_layout"
            style="@style/DetailsTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:hint="@string/current_machine_hour"
            android:textColorHint="@color/colorHint"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorHint"
            app:layout_constraintTop_toBottomOf="@id/dimen_layout"
            app:layout_constraintStart_toStartOf="@id/serial_number_layout"
            app:layout_constraintEnd_toEndOf="@id/serial_number_layout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/machine_hour_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorTextTitle" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>