<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wire_rope.WireRopeFragment">

    <LinearLayout
        android:id="@+id/layout_track_wire_rope_root"
        android:layout_width="220dp"
        android:layout_height="170dp"
        android:gravity="center"
        android:clickable="true"
        android:background="@drawable/buttons_background"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
     >

        <ImageView
            android:id="@+id/track_icon_wire_rope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_track"/>

        <TextView
            android:id="@+id/track_text_view_wire_rope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/track"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/textTitleSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_request_quotation_wire_rope_root"
        android:layout_width="220dp"
        android:layout_height="170dp"
        android:gravity="center"
        android:background="@drawable/buttons_background"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="@id/layout_track_wire_rope_root"
        app:layout_constraintTop_toBottomOf="@id/layout_track_wire_rope_root"
        >

        <ImageView
            android:id="@+id/request_quotation_icon_wire_rope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_quotation" />

        <TextView
            android:id="@+id/request_quotation_text_view_wire_rope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/request_quotation"
            android:textAllCaps="false"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/rfqTextSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>